--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.3",
   "description": "Physics plugin for Three.js",
   "main": "src/index.js",
-  "dependencies": {
-    "three": "^0.115.0"
+  "dependencies": {},
+  "peerDependencies": {
+    "three": "^0.131.3"
   },
   "author": "Chandler Prall <chandler.prall@gmail.com>",
   "repository": {
@@ -17,7 +18,6 @@
   ],
   "types": "index",
   "devDependencies": {
-    "worker-loader": "^2.0.0",
     "@types/three": "^0.93.31"
   },
   "license": "MIT",
