--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@notbucai/physijs",
+  "name": "@bucai/physijs",
   "version": "1.0.3",
   "description": "Physics plugin for Three.js",
   "main": "src/index.js",
